--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "ant-design-vue": "^2.2.2",
     "tailwindcss": "^2.1.4",
+    "uuid": "^8.3.2",
     "vue": "^3.0.5",
     "vue-router": "^4.0.8",
     "vuex": "^4.0.1"
