--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "uuid": "^8.3.2",
     "vue": "^3.0.5",
     "vue-router": "^4.0.8",
+    "vuedraggable": "^4.0.3",
     "vuex": "^4.0.1"
   },
   "devDependencies": {
