--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "vue": "^3.0.5",
     "vue-router": "^4.0.8",
     "vuedraggable": "^4.0.3",
-    "vuex": "^4.0.1"
+    "vuex": "^4.0.1",
+    "wangeditor": "^4.7.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.3.0",
