--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@icon-park/vue-next": "^1.3.5",
     "ant-design-vue": "^2.2.2",
     "tailwindcss": "^2.1.4",
     "uuid": "^8.3.2",
