--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@icon-park/vue-next": "^1.3.5",
     "ant-design-vue": "^2.2.2",
     "tailwindcss": "^2.1.4",
+    "tiny-emitter": "^2.1.0",
     "uuid": "^8.3.2",
     "vue": "^3.0.5",
     "vue-router": "^4.0.8",
